--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-} */
+}
 
 body {
   font-family: Arial, Helvetica, sans-serif;
@@ -16,5 +16,6 @@ body {
 @layer base {
   :root {
     --radius: 0.5rem;
+    --font-bebas-neue: "Bebas Neue", sans-serif;
   }
 }
